<?xml version="1.0"?>
<package format="2">
  <name>irl_gui</name>
  <version>0.0.0</version>
  <description>The irl_gui package</description>
  <author>Jun Jin</author>
  <maintainer email="laurapetrich@ualberta.ca">Jun Jin</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend version_gte="0.2.19">python_qt_binding</depend>
  <depend>python-rospkg</depend>
  <depend>rostopic</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>